--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d app"
+    "deploy": "gh-pages -d app",
+    "stylelint": "stylelint \"**/*.scss\"",
+        "stylelint:fix": "stylelint \"**/*{.css,.scss}\" --fix"
   },
   "author": "Tymur Oleshkevich",
   "license": "ISC",
@@ -19,6 +21,10 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stylelint": "^13.9.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0"
   }
 }
