--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
     "mixitup": "^3.3.1",
     "slick-carousel": "^1.8.1",
